Fix component spacing
I couldn't handle it anymore

--- a/tempo-tune/src/components/NavBar/NavBar.css
+++ b/tempo-tune/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .hero-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
